--- a/src/Highlight.Tests/Highlight.Tests.csproj
+++ b/src/Highlight.Tests/Highlight.Tests.csproj
@@ -1,14 +1,49 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.14.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Highlight\Highlight.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<AssemblyVersion>4.0.0.0</AssemblyVersion>
+		<Authors>Thomas Haugland Johansen</Authors>
+		<Copyright>Copyright © 2004 Thomas Haugland Johansen</Copyright>
+		<Description>Tests for a relatively simple and extensible syntax highlighter written in C#</Description>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+		<FileVersion>4.0.0.0</FileVersion>
+		<IncludeSymbols>True</IncludeSymbols>
+		<InformationalVersion>4.0.0.0</InformationalVersion>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/thomasjo/highlight</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<RepositoryUrl>https://github.com/thomasjo/highlight.git</RepositoryUrl>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<TargetFramework>net8.0</TargetFramework>
+		<Title>Highlight.Tests</Title>
+		<VersionPrefix>4.0.0.0</VersionPrefix>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="nunit" Version="4.0.1" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Highlight\Highlight.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Update="Engines\Resources\InputOutput.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>InputOutput.resx</DependentUpon>
+		</Compile>
+	</ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Update="Engines\Resources\InputOutput.resx">
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>InputOutput.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
 </Project>
