--- a/src/Highlight/Highlight.csproj
+++ b/src/Highlight/Highlight.csproj
@@ -1,9 +1,52 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>net8.0</TargetFrameworks>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="SixLabors.Fonts" Version="1.0.0-beta15" />
-  </ItemGroup>
+	<PropertyGroup>
+		<AssemblyVersion>4.0.0.0</AssemblyVersion>
+		<Authors>Thomas Haugland Johansen</Authors>
+		<Copyright>Copyright © 2004 Thomas Haugland Johansen</Copyright>
+		<Description>A relatively simple and extensible syntax highlighter written in C#</Description>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+		<FileVersion>4.0.0.0</FileVersion>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<IncludeSymbols>True</IncludeSymbols>
+		<InformationalVersion>4.0.0.0</InformationalVersion>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/thomasjo/highlight</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<RepositoryUrl>https://github.com/thomasjo/highlight.git</RepositoryUrl>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<TargetFrameworks>net8.0</TargetFrameworks>
+		<Title>Highlight</Title>
+		<VersionPrefix>4.0.0.0</VersionPrefix>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SixLabors.Fonts" Version="2.0.1" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Update="Resources.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Resources.resx</DependentUpon>
+		</Compile>
+	</ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Update="Resources.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
+	<ItemGroup>
+	  <EditorConfigFiles Remove="C:\GitHub\wforney\highlight\src\Highlight\.editorconfig" />
+	</ItemGroup>
 </Project>
